Name:                 s3
Version:              0.1
Build-type:           Simple
Synopsis:             Archives/restores data to/from s3
Description:
 
    CLI to archive and restore files to/from s3
    
License:              BSD-2 Clause
License-file:         LICENSE
Author:               Arnaud Bailly <arnaud@igitur.io>
Maintainer:           Arnaud Bailly <arnaud@igitur.io>
-- for sandboxing?
Cabal-version:        >= 1.20


Executable archiver
  Default-Language:  Haskell2010
  main-is:           s3.hs
  hs-source-dirs:    main
  ghc-options:       -Wall -fno-warn-orphans -threaded -Werror
  build-depends:     base
                   , aws
                   , mtl
                   , blaze-builder
                   , data-default
                   , conduit
                   , unix
                   , text
                   , bytestring
                   , conduit-extra
                   , http-conduit

